tests/paczka1/fuzzy1/17657313.err
Error in line 8: FOVd A407 64,6
Error in line 15: FOVd A912 9,2
Error in line 11: NVr8nK S814 40,3
Error in line 2: T3f15N A407 69,6
Error in line 40: d93bY A45[ 8,2
